[package]
name = "byte_creatoor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "byte_creatoor"
test = false
bench = false

[[bin]]
name = "byte_creatoor_chunked"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"]}
rand = "0.8.5"
sha256 = "1.4.0"

